modified view page and implemented datepicker

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,8 @@
     <title><%= @title %></title>
     <%= stylesheet_link_tag "site" %>
     <%= javascript_include_tag :defaults %>
+    <%= javascript_include_tag 'calender_date_select' %>
+    <%= calendar_date_select_includes "silver" %>
   </head>
   <body>
     <div id="whole_page">
