--- a/app/views/login/_bill.html.erb
+++ b/app/views/login/_bill.html.erb
@@ -1,6 +1,6 @@
 <tr>
 
-<td><%= @bills.date%></td>
+<td><%= display_date(@bills.date)%></td>
 <td><%= @bills.description %></td>
 
 <td><%= @bills.item_code %></td>
