--- a/app/views/login/_bill.html.erb
+++ b/app/views/login/_bill.html.erb
@@ -2,16 +2,8 @@
 
 <td><%= display_date(@bills.date)%></td>
 <td><%= @bills.description %></td>
-
-<td><%= @bills.item_code %></td>
-
-<td><%= @bills.curr %></td>
-
+<td><%= @bills.bill_date %></td>
 <td><%= @bills.amount %></td>
-
-<td><%= @bills.rate %></td>
-
-<td><%= @bills.amount_inr %></td>
 
 </tr>
 
