Delete is completely implemented

--- a/app/views/login/_bill.html.erb
+++ b/app/views/login/_bill.html.erb
@@ -1,10 +1,16 @@
+
+
 <tr>
 
-<td><%= display_date(@bills.date)%></td>
+<td><%= @bills.date%></td>
 <td><%= @bills.description %></td>
+
 <td><%= @bills.bill_date %></td>
+
 <td><%= @bills.amount %></td>
+
+
 
 </tr>
 
-
+</br>
